# nollmkb

./: .env.example  .gitignore  API.md  LICENSE  README.md  bm25.py  chunker.py  config.py  embedding.py  hash_db.py  indexer.py  logging_config.py  models.py  parsers.py  pyproject.toml  reranker.py  routes.py  server.py  wiki_server.py
auth/: users.toml.example
scripts/: gen_token.py  ingest.py  lint.py  relevance.py  setup.py  test_api.py
static/: documents.html  login.html  search.html  shared.js  wiki-edit.html  wiki-list.html  wiki-read.html
wiki_templates/: CLAUDE.md  index.md  log.md  purpose.md  schema.md
