[project]
name = "nollmkb"
version = "1.0.0"
description = "Lightweight RAG knowledge base + LLM-maintained wiki. ChromaDB + BGE-M3 + FastAPI."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "nollmkb contributors"},
]
keywords = ["rag", "knowledge-base", "chroma", "bge-m3", "wiki", "llm"]
dependencies = [
    "chromadb==1.5.9",
    "fastapi==0.136.3",
    "jieba==0.42.1",
    "openpyxl==3.1.5",
    "pydantic==2.13.4",
    "pymupdf>=1.27.2.3",
    "python-docx==1.2.0",
    "python-multipart>=0.0.30",
    "python-pptx==1.0.2",
    "sentence-transformers==5.5.1",
    "torch==2.12.0",
    "uvicorn==0.49.0",
]

[project.urls]
Repository = "https://github.com/Aaasukaa/nollmkb"
Issues = "https://github.com/Aaasukaa/nollmkb/issues"
